<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCadNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CadNota"
            android:text="@string/CadNota" />

        <Button
            android:id="@+id/btnGerNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="GerNota"
            android:text="@string/GerNota" />

        <Button
            android:id="@+id/btnCadData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CadData"
            android:text="@string/CadData" />

        <Button
            android:id="@+id/btnGerData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="GerData"
            android:text="@string/GerData" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Sair"
            android:text="@string/Sair" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>